[package]
name = "sb_assembler_cli"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
sb_assembler = { path = "./assembler"}

[workspace]
resolver = "2"
members = [
    "./assembler",
]

[workspace.dependencies]
anyhow = "1.0.93"
thiserror = "2.0.3"
